renamed:    Player.png -> Character_Sprite/Player.png 	renamed:    Road.png -> Object_Sprite/Road.png 	renamed:    ProjectPlan.md -> Others/ProjectPlan.md 	renamed:    a.tsx -> Others/a.tsx 	renamed:    demo_map_bytiledediter.tmx -> Others/demo_map_bytiledediter.tmx 	new file:   data/default/FieldData.js 	new file:   data/default/Object_type.js 	renamed:    const.js -> data/default/const.js 	deleted:    default.js 	modified:   game.html 	renamed:    main.js -> src/main.js 	renamed:    main_char.js -> src/main_char.js 	renamed:    map.js -> src/map.js

--- a/game.html
+++ b/game.html
@@ -4,10 +4,16 @@
 <meta charset="utf-8">
 </head>
 <body>
+    <div id="start">
+        <div id="startMessage"></div>
+        <div id="startButton"></div>
+    </div>
     <canvas id = "can"></canvas>
-    <script src = "const.js"></script> 
-    <script src = "map.js"></script>
-    <script src = "main_char.js"></script>
-    <script src = "main.js"></script>
+    <script src = "./data/default/const.js"></script> 
+    <script src = "./data/default/FieldData.js"></script> 
+    <script src = "./data/default/Object_type.js"></script> 
+    <script src = "./src/map.js"></script>
+    <script src = "./src/main_char.js"></script>
+    <script src = "./src/main.js"></script>
 </body>
 </html>
