--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
     <script src = "./data/default/FieldData.js"></script> 
     <script src = "./data/default/Object_type.js"></script> 
     <script src = "./src/map.js"></script>
-    <script src = "./src/main_char.js"></script>
+    <script src = "./src/player.js"></script>
     <script src = "./src/main.js"></script>
 </body>
 </html>
