humanという親クラスを作成し，playerを子クラス定義

--- a/src/game.html
+++ b/src/game.html
@@ -12,6 +12,7 @@
     <script src = "../data/default/const.js"></script> 
     <script src = "../data/default/FieldData.js"></script> 
     <script src = "../data/default/Object_type.js"></script> 
+    <script src = "../data/default/human.js"></script>
     <script src = "map.js"></script>
     <script src = "player.js"></script>
     <script src = "main.js"></script>
