親クラス，初期値のファイル，フォルダー分け．\

--- a/src/game.html
+++ b/src/game.html
@@ -11,10 +11,11 @@
     <canvas id = "can"></canvas>
     <script src = "../data/default/const.js"></script> 
     <script src = "../data/default/FieldData.js"></script> 
-    <script src = "../data/default/Object_type.js"></script> 
+    <script src = "../class/human.js"></script> 
     <script src = "../data/default/human.js"></script>
+    <script src = "entity/const_player.js"></script>
     <script src = "map.js"></script>
-    <script src = "player.js"></script>
+    <script src = "./entity/player.js"></script>
     <script src = "main.js"></script>
 </body>
 </html>
