--- a/src/game.html
+++ b/src/game.html
@@ -11,6 +11,7 @@
     <canvas id = "can"></canvas>
     <script src = "../data/default/const.js"></script> 
     <script src = "../data/default/FieldData.js"></script> 
+    <script src = "../data/default/Object_type.js"></script> 
     <script src = "../class/human.js"></script> 
     <script src = "../data/default/human.js"></script>
     <script src = "entity/const_player.js"></script>
