--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,11 @@
 </style>
 <canvas></canvas>
 <script src = "../class/human.js"></script>
-<script src = "hero.js"></script>
-<script src = "../data/const.js"></script>
 <script src = "../class/background.js"></script>
+<script src = "../class/boundary.js"></script>
+<script src = "../data/collision.js"></script>
+<script src = "../data/const.js"></script>
 <script src = "bg_default.js"></script>
+<script src = "col_default.js"></script>
+<script src = "hero.js"></script>
 <script src = "main.js"></script>
