--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+</head>
 <style>
     body {
         background-color: black; 
@@ -13,3 +18,4 @@
 <script src = "col_default.js"></script>
 <script src = "hero.js"></script>
 <script src = "main.js"></script>
+</html>
