当たり判定チェック実装完了!!

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 <script src = "../class/boundary.js"></script>
 <script src = "../data/collision.js"></script>
 <script src = "../data/const.js"></script>
+<script src = "../data/function.js"></script>
 <script src = "bg_default.js"></script>
 <script src = "col_default.js"></script>
 <script src = "hero.js"></script>
