--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 <script src = "fg_default.js"></script>
 <script src = "col_default.js"></script>
 <script src = "hero.js"></script>
+<script src = "../data/img.js"></script>
 <script src = "../data/collision.js"></script>
 <script src = "../data/const.js"></script>
 <script src = "../data/function.js"></script>
