プレイヤーのインベントリ管理系のクラスメソッド定義，実装

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
   <script src="../class/human.js"></script>
   <script src="../class/ground.js"></script>
   <script src="../class/boundary.js"></script>
+  <script src="../class/inventory.js"></script>
   <script src="bg_default.js"></script>
   <script src="fg_default.js"></script>
   <script src="col_default.js"></script>
