--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
   <script src="col_default.js"></script>
   <script src="hero.js"></script>
   <script src="npc01.js"></script>
+  <script src="../data/talking.js"></script>
   <script src="../data/img.js"></script>
   <script src="../data/collision.js"></script>
   <script src="../data/const.js"></script>
