--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
   <script src="../data/talking.js"></script>
   <script src="../data/img.js"></script>
   <script src="../data/collision.js"></script>
+  <script src="../data/npc.js"></script>
   <script src="../data/const.js"></script>
   <script src="../data/function.js"></script>
   <script src="main.js"></script>
