--- a/src/index.html
+++ b/src/index.html
@@ -23,17 +23,20 @@
   <script src="../class/ground.js"></script>
   <script src="../class/boundary.js"></script>
   <script src="../class/inventory.js"></script>
-  <script src="bg_default.js"></script>
-  <script src="fg_default.js"></script>
-  <script src="col_default.js"></script>
-  <script src="hero.js"></script>
-  <script src="npc01.js"></script>
+  <script src="../class/npc01.js"></script>
   <script src="../data/talking.js"></script>
   <script src="../data/img.js"></script>
   <script src="../data/collision.js"></script>
   <script src="../data/npc.js"></script>
   <script src="../data/const.js"></script>
   <script src="../data/function.js"></script>
+  <script src="../npc/npc375.js"></script>
+  <script src="../npc/npc377.js"></script>
+  <script src="../npc/npc378.js"></script>
+  <script src="bg_default.js"></script>
+  <script src="fg_default.js"></script>
+  <script src="col_default.js"></script>
+  <script src="hero.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
