--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <script src="../class/boundary.js"></script>
   <script src="../class/inventory.js"></script>
   <script src="../class/npc01.js"></script>
-  <script src="../data/talking.js"></script>
+  <script src="../data/dialog.js"></script>
   <script src="../data/img.js"></script>
   <script src="../data/collision.js"></script>
   <script src="../data/npc.js"></script>
