--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
   <meta charset="utf-8">
+  <title>My RPG Game</title>
   <link rel="stylesheet" href="inventory.css">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      background-color: black;
+      font-family: 'Press Start 2P', monospace;
+      color: white;
+      overflow: hidden;
+    }
+
+    canvas {
+      display: block;
+    }
+
+    /* ✅ ゲーム開始画面 */
+    #start-screen {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: black;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+
+    #start-screen h1 {
+      font-size: 24px;
+      margin-bottom: 20px;
+      color: #00ffcc;
+      text-shadow: 2px 2px #004444;
+    }
+
+    #press-start {
+      font-size: 16px;
+      color: #ffffff;
+      animation: blink 1s step-start infinite;
+    }
+
+    @keyframes blink {
+      50% { opacity: 0; }
+    }
+
+    /* ✅ インベントリUI（初期は非表示） */
+    #inventory {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background-color: rgba(0, 0, 0, 0.7);
+      border: 2px solid #00ffcc;
+      padding: 10px;
+      display: none;
+      z-index: 500;
+    }
+
+    #inventory h2 {
+      margin: 0 0 10px;
+      font-size: 14px;
+    }
+
+    #inventory-list li {
+      font-size: 12px;
+    }
+  </style>
 </head>
 
 <body>
   <canvas></canvas>
 
-  <!-- ✅ ここがインベントリUI -->
+  <!-- ✅ ゲーム開始画面 -->
+  <div id="start-screen">
+    <h1>BUF Game</h1>
+    <p id="press-start">Press Space to Start</p>
+  </div>
+
+  <!-- ✅ インベントリUI -->
   <div id="inventory">
     <h2>🎒 持ちもの</h2>
     <ul id="inventory-list">
-      <li>ポーション ×3</li>
-      <li>木の剣</li>
-      <li>革のよろい</li>
     </ul>
   </div>
 
-  <!-- JavaScriptファイルの読み込み -->
+  <!-- ✅ JavaScriptファイルの読み込み -->
   <script src="../class/human.js"></script>
   <script src="../class/ground.js"></script>
   <script src="../class/boundary.js"></script>
@@ -38,5 +107,20 @@
   <script src="col_default.js"></script>
   <script src="hero.js"></script>
   <script src="main.js"></script>
+
+  <!-- ✅ ゲーム開始処理 -->
+  <script>
+    let gameStarted = false;
+
+  document.addEventListener('keydown', (e) => {
+    if ((e.key === 'Enter' || e.key === ' ') && !gameStarted) {
+      gameStarted = true; // ✅ これで二度と再起動しない
+      document.getElementById('start-screen').style.display = 'none';
+      document.getElementById('inventory').style.display = 'block';
+      startGame();
+    }
+  });
+
+  </script>
 </body>
 </html>
