--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <style>
     body {
-      margin: 0;
-      background-color: black;
-      font-family: 'Press Start 2P', monospace;
-      color: white;
-      overflow: hidden;
-    }
+  margin: 0;
+  background-color: black;
+  font-family: 'Press Start 2P', monospace;
+  color: white;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
     canvas {
       display: block;
@@ -20,16 +24,23 @@
 
     /* ✅ ゲーム開始画面 */
     #start-screen {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background-color: black;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
-    }
+  position: absolute;
+  top: 0; left: 0;
+  width: 1024px;
+  height: 576px;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  margin: auto;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border: 4px solid #00ffcc;
+}
+
 
     #start-screen h1 {
       font-size: 24px;
