--- a/src/index.html
+++ b/src/index.html
@@ -108,6 +108,7 @@
   <script src="../data/dialog.js"></script>
   <script src="../data/img.js"></script>
   <script src="../data/collision.js"></script>
+  <script src="../data/shop.js"></script>
   <script src="../data/npc.js"></script>
   <script src="../data/const.js"></script>
   <script src="../data/function.js"></script>
