--- a/src/index.html
+++ b/src/index.html
@@ -115,6 +115,7 @@
   <script src="../data/const.js"></script>
   <script src="../data/function.js"></script>
   <script src="../npc/kanbanNpc.js"></script>
+  <script src="../npc/kusaNpc.js"></script>
   <!-- <script src="../npc/npc377.js"></script>
   <script src="../npc/npc378.js"></script> -->
   <script src="bg_default.js"></script>
