--- a/src/index.html
+++ b/src/index.html
@@ -114,10 +114,11 @@
   <script src="../data/npc.js"></script>
   <script src="../data/const.js"></script>
   <script src="../data/function.js"></script>
+  <script src="../data/kusa.js"></script>
   <script src="../npc/kanbanNpc.js"></script>
   <script src="../npc/kusaNpc.js"></script>
-  <!-- <script src="../npc/npc377.js"></script>
-  <script src="../npc/npc378.js"></script> -->
+  <script src="../npc/kusaBaba.js"></script>  
+  <script src="kusa_default.js"></script>
   <script src="bg_default.js"></script>
   <script src="fg_default.js"></script>
   <script src="col_default.js"></script>
