--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,9 @@
   <script src="../npc/kanbanNpc.js"></script>
   <script src="../npc/kusaNpc.js"></script>
   <script src="../npc/kusaBaba.js"></script>  
-  <script src="../npc/hasiNpc.js"></script>  
+  <script src="../npc/BOSS.js"></script>  
+  <script src="../npc/hasiNpc.js"></script>
+  <script src="../npc/treasureBox.js"></script>
   <script src="kusa_default.js"></script>
   <script src="bg_default.js"></script>
   <script src="fg_default.js"></script>
