--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,7 @@
 
 
   <!-- ✅ JavaScriptファイルの読み込み -->
+  <script src="../data/sound.js"></script>
   <script src="../class/human.js"></script>
   <script src="../class/ground.js"></script>
   <script src="../class/boundary.js"></script>
