--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
   <script src="fg_default.js"></script>
   <script src="col_default.js"></script>
   <script src="hero.js"></script>
-  <script src="Quiz.js"></script>
+  <script src="quiz.js"></script>
   <script src="main.js"></script>
 
   <!-- ✅ ゲーム開始処理 -->
