--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="inventory.css">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@400&display=swap" rel="stylesheet">
+  <link
+  href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap"
+  rel="stylesheet"
+>
+
   <style>
     body {
   margin: 0;
@@ -96,7 +101,7 @@
 
   <!-- ✅ ゲーム開始画面 -->
   <div id="start-screen">
-    <h1>BUF Game</h1>
+    <h1>SYNTAX QUEST</h1>
     <p id="press-start">Press Space to Start</p>
   </div>
 
